# tetris

./: Cargo.toml  index.html  tetris.d.ts  tetris.js  tetris_bg.wasm.d.ts
.cargo/: config.toml
.github/workflows/: pull_request.yaml  wasm.yaml
assets/sounds/: CREDITS.md
src/: audio.rs  bricks.rs  controls.rs  main.rs  shape.rs  tick.rs  ui.rs
